tests/cases/attributes/errors/attribute-token-tree-mismatch.ari
meta fn trace(input: token_stream) -> token_stream {
}

@trace([1, 2)
fn value() -> i64 {
  return 1;
}

fn main() -> i64 {
  return value();
}
